# chess

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  configure.sh  prod.sh  run.sh  test.sh
chess_lib/: CMakeLists.txt  board.cpp  fen.cpp  move.cpp  piece.cpp  player.cpp  rules.cpp
chess_lib/include/: board.hpp  board_state.hpp  debug_data.hpp  fen.hpp  move.hpp  piece.hpp  player.hpp  rules.hpp
chess_lib/rules/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
src/: CMakeLists.txt  audio.cpp  audio.h  audio.hpp  board.cpp  board.h  board.hpp  board_renderer.cpp  board_renderer.h  board_state.hpp  board_theme.cpp  board_theme.h  board_theme.hpp  clock.cpp  clock.hpp  debug_data.h  game.cpp  game.h  game.hpp  imgui_layer.cpp  imgui_layer.hpp  legal_moves.cpp  legal_moves.h  main.cpp  move.cpp  move.h  move.hpp  piece.cpp  piece.h  piece.hpp  piece_renderer.cpp  piece_renderer.h  player.h  player.hpp  rules.cpp  rules.h  rules.hpp  sound_system.cpp  sound_system.h
src/chess/: board.cpp  board.h  board_renderer.cpp  board_renderer.h  board_theme.cpp  board_theme.h  move.h  piece.cpp  piece.h  piece_renderer.cpp  piece_renderer.h
src/core/: game.cpp  game.h  renderable.h  sound_system.cpp  sound_system.h
src/renderers/: board_renderer.cpp  board_renderer.h  board_renderer.hpp  captured_pieces_renderer.cpp  captured_pieces_renderer.hpp  piece_renderer.cpp  piece_renderer.h  piece_renderer.hpp
src/rules/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
test/: CMakeLists.txt  test.cpp
